# starsearch

./: .env.template  .gitignore  .prettierrc.js  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  docker-compose.dev.yml  docker-compose.yml
.github/media/: cli-demo.tape
.github/workflows/: docker.yml  release.yml
src/: config.rs  main.rs  main_cli.rs
src/cli/: mod.rs  models.rs
src/db/: errors.rs  mod.rs
src/scraper/: errors.rs  mod.rs  models.rs
src/web/: catchers.rs  mod.rs  models.rs
starsearch-backend/: Cargo.toml
starsearch-backend/src/: main.rs
starsearch-backend/src/scraper/: models.rs
starsearch-backend/src/web/: mod.rs  models.rs
starsearch-cli/: Cargo.toml
starsearch-cli/src/: config.rs  main.rs  models.rs  tui.rs
starsearch-sdk/: Cargo.toml
starsearch-sdk/src/: client.rs  errors.rs  models.rs
starsearch-server/: Cargo.toml
starsearch-server/src/: config.rs  main.rs
starsearch-server/src/db/: errors.rs  mod.rs  models.rs
starsearch-server/src/scraper/: errors.rs  mod.rs  models.rs
starsearch-server/src/web/: catchers.rs  mod.rs  models.rs  ratelimit.rs
static/: index.css  index.js
templates/: index.html.hbs
