[package]
name = "starsearch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ["openssl/vendored"]

[dependencies]
starsearch-sdk = { path = "../starsearch-sdk" }
clap = { version = "4.3.3", features = ["derive", "env"] }
console = "0.15.7"
openssl = { version = "0.10", features = ["vendored"], optional = true }
reqwest = { version = "0.12.4", features = ["default-tls", "json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
dirs = "5.0.1"
toml = "0.8.14"
