[package]
name = "starsearch-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_ssl = ["openssl/vendored"]

[dependencies]
starsearch-sdk = { path = "../starsearch-sdk" }
clap = { version = "4.5.46", features = ["derive", "env"] }
console = "0.16.0"
openssl = { version = "0.10", features = ["vendored"], optional = true }
reqwest = { version = "0.12.23", features = ["default-tls", "json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
dirs = "6.0.0"
toml = "0.9.5"
chrono = "0.4.41"
