[package]
name = "starsearch-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11.18", features = ["default-tls", "tokio-native-tls", "json", "blocking"] }
thiserror = "1.0.40"