[package]
name = "starsearch-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["default-tls", "json", "blocking"] }
thiserror = "2.0.16"
