[package]
name = "starsearch-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starsearch-sdk = { path = "../starsearch-sdk" }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
figment = { version = "0.10", features = ["env"] }
log = "0.4"
meilisearch-sdk = "0.26"
reqwest = { version = "0.12", features = ["default-tls", "json", "blocking"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2", features = ["handlebars"] }
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
tokio-cron-scheduler = "0.10"
rocket-governor = "0.2.0-rc.3"
